--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,46 @@
-table, tr, td {
-  border: 1px solid;
+.container{
+    display: grid;
+    grid-gap: 25px;
+    grid-template-areas:
+    "header-grid header-grid header-grid"
+    ". nav-grid ."
+    "main-grid main-grid main-grid";
+    grid-template-columns: 50px 1fr 50px;
+    background-color: antiquewhite;
+    margin: 15px;
 }
 
-td{
-  width: 250px;
-  align:center;
+header{
+    grid-area: header-grid;
+    height: 75px;
+    margin: 5px 5px 0px 5px;
+    background-color: #DAE8F2;
+    text-align: center;
 }
+
+main{
+    grid-area: main-grid;
+    height: 400px;
+    margin: 5px 5px 0px 5px;
+    background-color: #DAE8F2;    
+}
+
+nav{
+    grid-area: nav-grid;
+    height: 50px;
+    margin: 0px 5px 0px 5px;
+    background-color: #DAE8F2;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+}
+
+body{
+    background-color: #4D565E;
+}
+
+a{
+    color: #AB64EF;
+}
+
