--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ header{
 
 main{
     grid-area: main-grid;
-    height: 400px;
+    height: 1fr;
     margin: 5px 5px 0px 5px;
     background-color: #DAE8F2;    
 }
