--- a/styles.css
+++ b/styles.css
@@ -70,10 +70,22 @@ pre{
     background-color: #FFFFFF;
 }
 
-table, tr, td {
+table, tr, td, th{
     border: 1px solid black;
   }        
 
+.changed{
+    background-color:aqua;
+}
+
+.newvalue{
+    background-color:pink;
+}
+
+.fancy{
+    font-weight: bolder;
+    background-color: #FFFFFF;
+}
 
 @media (max-width: 800px){
     /* Stacking the grid differently for small screens*/
@@ -84,6 +96,7 @@ table, tr, td {
         "main-grid";
         grid-template-columns: 1fr;
         grid-gap: 0px;
+        width: 100%;
     }
 
     /* Smaller font size, vertical nav bar, removing margins on small screens */
